# dsba-itop2022-hw

./: Report.docx
src/: CMakeLists.txt  QtBrands - Лист1.csv
src/BigHW/: aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  customproxymodel.cpp  customproxymodel.h  examplemodel.cpp  examplemodel.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
